force-app/main/default/objects/Milestone1_Task__c/fields/Index_Helper__c.field-meta.xml
<CustomField>
    <fullName>Index_Helper__c</fullName>
    <formula>Assigned_To__r.FirstName &amp; &#39; &#39; &amp; Assigned_To__r.LastName &amp; &#39; &#39; &amp; Project_Milestone__r.Project__r.Name &amp; &#39; &#39; &amp; Project_Milestone__r.Name &amp; &#39; complete:&#39; &amp; IF(Complete__c, &#39;yes&#39;, &#39;no&#39;) &amp; &#39; &#39; &amp; Name</formula>
    <label>Index Helper</label>
    <type>Text</type>
</CustomField>