force-app/main/default/objects/Milestone1_Task__c/fields/Overall_Status__c.field-meta.xml
<CustomField>
    <fullName>Overall_Status__c</fullName>
    <formula>if ( Complete__c == true, &#39;Complete&#39;,
  if ( and( Days_Late_Formula__c &gt; 0,  Blocked__c  ),
    if(Len( Text(Task_Stage__c))&gt;0 , &#39;Late &amp; Blocked &#39; &amp; Text(Task_Stage__c), &#39;Late &amp; Blocked&#39;),
    if (Days_Late_Formula__c &gt; 0,  
      if(Len( Text(Task_Stage__c))&gt;0, &#39;Late &#39; &amp; text(Task_Stage__c), &#39;Late&#39;),
      if(Blocked__c == true, 
        if(Len( Text(Task_Stage__c))&gt;0, &#39;Blocked &#39; &amp; text(Task_Stage__c), &#39;Blocked&#39;), 
        if(Len( Text(Task_Stage__c))&gt;0, &#39;Open &#39; &amp; Text(Task_Stage__c), &#39;Open&#39;) 
))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated field indicating if the task is complete, open, late, blocked or late and blocked.</inlineHelpText>
    <label>Overall Status</label>
    <type>Text</type>
</CustomField>