force-app/main/default/objects/Milestone1_Task__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <formula>IF( OR($User.UIThemeDisplayed == &quot;Theme4d&quot;, $User.UIThemeDisplayed == &quot;Theme4t&quot;),
        HYPERLINK(&#39;one.app?source=aloha#/sObject/&#39; + Project_Milestone__r.Project__c + &#39;/view&#39;,
                  Project_Milestone__r.Project__r.Name,
                  &#39;_self&#39;),
        HYPERLINK(Project_Milestone__r.Project__c,
                  Project_Milestone__r.Project__r.Name,
                  &#39;_self&#39;)
   )</formula>
    <inlineHelpText>A link to the Project which this task is included in via its milestone.</inlineHelpText>
    <label>Project</label>
    <type>Text</type>
</CustomField>